# votashot

./: README.md  README_fr.md
backends/default_django/: .gitignore  create_sources.sh  manage.py  prod_serve.py  pyproject.toml  run-tests.sh  run_dev_mode.sh  setup_dev_mode.sh  setup_prod_mode.sh
backends/default_django/common_bases/: apps.py  base_factories.py  base_filters.py  base_testing.py  custom_filters.py  custom_mixins.py  custom_viewsets.py  enums.py  errors.py  responses.py  serializers.py
backends/default_django/confs/: ufrecs-nginx.conf  ufrecs-supervisor.conf
backends/default_django/core/: admin.py  api_urls.py  api_views.py  apps.py  authentication.py  dashboard_urls.py  dashboard_views.py  enums.py  filters.py  models.md  models.py  serializers.py  utils.py
backends/default_django/core/management/commands/: analyze_vote.py  decide_votes.py  decide_vp_results.py  delete_votes.py  delete_vp_results.py  extract_poll_offices.py  fast_seed_votes.py  fast_vp_results.py  load_sources.py  register_sources.py  run_vote_bot.py  (+6 more)
backends/default_django/core/services/: candidateparty.py  polloffice.py  source.py  sourcetoken.py  vote.py  voteaccepted.py  voteproposed.py  voter.py  voteverified.py  votingpaperresult.py  votingpaperresultproposed.py
backends/default_django/core/tests/: __init__.py  test_authentication.py  test_candidateparty.py  test_poll_office_results.py  test_poll_office_stats.py  test_polloffice.py  test_s3.py  test_source.py  test_sourcetoken.py  test_vote.py  test_vote_decision_algorithm.py  test_voteaccepted.py  test_voteproposed.py  test_voter.py  test_voteverified.py  test_votingpaperresult.py  test_votingpaperresultproposed.py
backends/default_django/ufrecs/: asgi.py  settings.py  urls.py  wsgi.py
(+83 files in other folders)
