[project]
name = "ufrecs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beartype>=0.21.0",
    "boto3>=1.40.16",
    "django~=5.2",
    "django-crispy-forms>=2.4",
    "django-filter>=25.1",
    "django-magic-notifier>=0.4.0",
    "django-silk>=5.4.3",
    "django-storages>=1.14.6",
    "django-stubs-ext>=5.2.2",
    "django-cors-headers>=4.4.0",
    "django-uni-ps",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.28.0",
    "factory-boy>=3.3.3",
    "faker>=37.5.3",
    "model-bakery>=1.20.5",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
    "traceback-with-variables>=2.2.0",
    "boto3-stubs>=1.40.24",
    "django-cacheops>=7.2",
    "pyruvate>=1.5.0",
    "aiohttp>=3.12.15",
]

[tool.uv.sources]
django-uni-ps = { git = "https://gitlab.ngoul.com/yaknema/uni-ps.git" }
